Prod-EU/force-app/main/default/objects/Patient_Document__c/Patient_Document__c.object-meta.xml
<CustomObject>
    <label>Patient Document</label>
    <nameField>
        <displayFormat>PDOC-{00000}</displayFormat>
        <label>PDOC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>