Prod-EU/force-app/main/default/objects/Patient_Document__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient Documents</relationshipLabel>
    <relationshipName>Patient_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>