Prod-EU/force-app/main/default/objects/Patient_Document__c/fields/Collect_From__c.field-meta.xml
<CustomField>
    <fullName>Collect_From__c</fullName>
    <label>Collect From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Online Form</fullName>
            </value>
            <value>
                <fullName>Patient</fullName>
            </value>
            <value>
                <fullName>Physician</fullName>
            </value>
            <value>
                <fullName>Caseworker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>