Prod-EU/force-app/main/default/objects/Patient_Document__c/fields/Doc_Type__c.field-meta.xml
<CustomField>
    <fullName>Doc_Type__c</fullName>
    <label>Doc Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PIAF</fullName>
            </value>
            <value>
                <fullName>CMN</fullName>
            </value>
            <value>
                <fullName>T1D Note</fullName>
            </value>
            <value>
                <fullName>Claim Form</fullName>
            </value>
            <value>
                <fullName>A1c</fullName>
            </value>
            <value>
                <fullName>BG Logs</fullName>
            </value>
            <value>
                <fullName>CGM Quest</fullName>
            </value>
            <value>
                <fullName>LIC</fullName>
            </value>
            <value>
                <fullName>Pregnancy Rx</fullName>
            </value>
            <value>
                <fullName>Narrative Letter</fullName>
            </value>
            <value>
                <fullName>ODSP Info Form</fullName>
            </value>
            <value>
                <fullName>NIHB Claim Form</fullName>
            </value>
            <value>
                <fullName>NIHB Estimate</fullName>
            </value>
            <value>
                <fullName>Prior-Auth Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>