Prod-EU/force-app/main/default/objects/Patient_Document__c/fields/PDoc_To_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>PDoc_To_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PDoc To Opportunity</label>
    <referenceTo>PDoc_To_Opportunity__c</referenceTo>
    <relationshipLabel>Patient Documents</relationshipLabel>
    <relationshipName>Patient_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>