Prod-EU/force-app/main/default/objects/Patient_Document__c/fields/Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sent Date</label>
    <type>Date</type>
</CustomField>